# htx-nvidia-hackathon

./: .gitignore  README.md  app.py  call_stt_parakeet.py  kimi_server.py  pyproject.toml  requirements.txt  stt_client.py
client/: pyproject.toml
rag/: pyproject.toml
stt/: stt_client.py  stt_client_wrapper.py  stt_config.yaml  stt_config_api.yaml  stt_config_nims.yaml  unused_call_stt_parakeet.py
